# basecamp-meshtastic

./: .gitignore  DATAFLOWS.md  README.md
.github/workflows/: gui-modules.yml  logoscore-main.cpp  pi-stack.yml  release.yml
docs/: SETUP.md
gateway/: CMakeLists.txt  flake.nix  metadata.embedded.json  metadata.json
gateway/helper/: mesh_helper.py
gateway/src/: mesh_gateway_plugin.cpp  mesh_gateway_plugin.h  mesh_radio.h  meshcore_protocol.cpp  meshcore_protocol.h  meshcore_radio.cpp  meshcore_radio.h  meshtastic_gateway_interface.h  meshtastic_gateway_plugin.cpp  meshtastic_gateway_plugin.h
gateway/tests/: meshcore-codec.test.yaml  meshcore_radio_test.pro  test_meshcore_protocol.cpp  test_meshcore_radio.cpp
repo/: index.json  logos-repo.json
server/: README.md  gwctl  install.sh  mesh-gateway-run  mesh-gateway.service  meshtastic-gateway-run  meshtastic-gateway.service
ui/: Main.qml  flake.nix  metadata.json
